hphp/hack/test/typecheck/reified_generics/function_incorect_param.php.exp
File "function_incorect_param.php", line 8, characters 5-7:
The type argument at index 0 is not reified (Typing[4302])
  File "function_incorect_param.php", line 4, characters 18-19:
  Its definition Tu is reified
